Ktor-Kotlin-RabbitMQ-Postgres-Angular project